Finished building decoder, passed advanced file test with decoder, pending collecting statistics, more deeper tests, advanced memory checks, and improved decoder efficiency

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,13 @@
 CC = clang
 CFLAGS = -g -Wall -Wextra -Werror -Wpedantic
 
-all: encode
+all: encode decode
 
 encode: encode.o huffman.o io.o code.o pq.o stack.o node.o
 	$(CC) $(CFLAGS) -o encode $^
+
+decode: decode.o huffman.o io.o code.o pq.o stack.o node.o
+	$(CC) $(CFLAGS) -o decode $^
 
 %.o: %.c *.h
 	$(CC) $(CFLAGS) -c $<
